--- a/_extensions/clean/clean.scss
+++ b/_extensions/clean/clean.scss
@@ -61,8 +61,8 @@ $selection-bg: #26351c !default;
   .title {
     color: $body-color;
     font-size: 1.4em;
-    // font-weight: 350;
-    font-weight: lighter;
+    font-weight: 350;
+    // font-weight: lighter;
   }
 
   .subtitle {
